apps/centraldashboard/upstream/overlays/istio/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: centraldashboard
spec:
  parentRefs:
  - name: kubeflow-gateway
    namespace: kubeflow
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: centraldashboard
      port: 80
